kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__destination_hir_lowering_preserves_local_scalar_across_empty_else_if.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "local_across_if") {
  region @s0 {
    args: [arg0, arg1, %ms]
    n1 = Const(0x2) [] -> [v0]
    n2 = Const(0x0) [] -> [v1]
    n3 = gamma [
      pred: v1
      in0: %ms:arg
    ] {
      branch 0:
        region @s1 {
          args: [%ms]
          results: [%ms:arg]
        }
      branch 1:
        region @s2 {
          args: [%ms]
          results: [%ms:arg]
        }
    } -> [%ms]
    n4 = Const(0x4) [] -> [v2]
    n5 = Or [v0, v2] -> [v3]
    results: [%ms:n3]
  }
}
