kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_function_with_local.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "add_one") {
  region @s0 {
    args: [arg0, %ms]
    n1 = Const(0x1) [] -> [v0]
    n2 = Add [arg0, v0] -> [v1]
    results: [v1, %ms:arg]
  }
}
