kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_if_else.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "abs_diff") {
  region @s0 {
    args: [arg0, arg1, %ms]
    n1 = CmpGt [arg0, arg1] -> [v0]
    n2 = Const(0x0) [] -> [v1]
    n5 = gamma [
      pred: v0
      in0: arg0
      in1: arg1
      in2: v1
      in3: %ms:arg
    ] {
      branch 0:
        region @s1 {
          args: [arg0, arg1, arg2, %ms]
          n3 = Sub [arg1, arg0] -> [v2]
          results: [arg0, arg1, v2, %ms:arg]
        }
      branch 1:
        region @s2 {
          args: [arg0, arg1, arg2, %ms]
          n4 = Sub [arg0, arg1] -> [v3]
          results: [arg0, arg1, v3, %ms:arg]
        }
    } -> [v4, v5, v6, %ms]
    results: [v6, %ms:n5]
  }
}
