kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_match.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
  s3 = gamma_branch(2) parent s0
}
lambda @0 @s0 (shape: "classify") {
  region @s0 {
    args: [arg0, %ms]
    n1 = Const(0x0) [] -> [v0]
    n5 = gamma [
      pred: arg0
      in0: v0
      in1: %ms:arg
    ] {
      branch 0:
        region @s1 {
          args: [arg0, %ms]
          n2 = Const(0xa) [] -> [v1]
          results: [v1, %ms:arg]
        }
      branch 1:
        region @s2 {
          args: [arg0, %ms]
          n3 = Const(0xb) [] -> [v2]
          results: [v2, %ms:arg]
        }
      branch 2:
        region @s3 {
          args: [arg0, %ms]
          n4 = Const(0xc) [] -> [v3]
          results: [v3, %ms:arg]
        }
    } -> [v4, %ms]
    results: [v4, %ms:n5]
  }
}
