kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_struct_field_access.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "sum_fields") {
  region @s0 {
    args: [arg0, arg1, %ms]
    n1 = Add [arg0, arg1] -> [v0]
    results: [v0, %ms:arg]
  }
}
