kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__structural_hir_ir_path_computes_bit_masks.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "mask_summary") {
  region @s0 {
    args: [arg0, arg1, arg2, arg3, arg4, %ms]
    n1 = Const(0xf) [] -> [v0]
    n2 = Const(0xb) [] -> [v1]
    n3 = And [v0, v1] -> [v2]
    n4 = Const(0x1) [] -> [v3]
    n5 = Shr [v2, v3] -> [v4]
    n6 = Const(0x3) [] -> [v5]
    n7 = Xor [v2, v5] -> [v6]
    n8 = Const(0x1) [] -> [v7]
    n9 = Const(0x3) [] -> [v8]
    n10 = Shl [v7, v8] -> [v9]
    n11 = Const(0x1) [] -> [v10]
    n12 = Or [v9, v10] -> [v11]
    results: [%ms:arg]
  }
}
