kajit/kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__structural_hir_ir_path_updates_local_scratch_struct_fields.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "scratch_summary", output_size: 8) {
  region @s0 {
    args: [arg0, arg1, %ms]
    n1 = WriteToSlot(0) [arg1, %ms:arg] -> [%ms]
    n2 = Const(0xf) [] -> [v0]
    n3 = WriteToSlot(1) [v0, %ms:n1] -> [%ms]
    n4 = ReadFromSlot(1) [%ms:n3] -> [v1, %ms]
    n5 = Const(0x3) [] -> [v2]
    n6 = And [v1, v2] -> [v3]
    n7 = WriteToSlot(2) [v3, %ms:n4] -> [%ms]
    n8 = ReadFromSlot(1) [%ms:n7] -> [v4, %ms]
    n9 = StoreToAddr(W4) [arg0, v4, %ms:n8] -> [%ms]
    n10 = ReadFromSlot(2) [%ms:n9] -> [v5, %ms]
    n11 = Const(0x4) [] -> [v6]
    n12 = Add [arg0, v6] -> [v7]
    n13 = StoreToAddr(W4) [v7, v5, %ms:n10] -> [%ms]
    results: [%ms:n13]
  }
}
